Fix overflow issues of clear history button

--- a/app/stylesheets/builtin-pages/components/links-list.less
+++ b/app/stylesheets/builtin-pages/components/links-list.less
@@ -2,7 +2,7 @@
 
 .links-list {
 
-  .link {
+  .link:not(button) {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: clip;
