--- a/app/stylesheets/builtin-pages/history.less
+++ b/app/stylesheets/builtin-pages/history.less
@@ -15,11 +15,4 @@
       max-width: 700px;
     }
   }
-
-  .builtin-header {
-
-    select {
-      height: 28px;
-    }
-  }
 }
